--- a/form.css
+++ b/form.css
@@ -1,8 +1,7 @@
-
 /* Basic styles for the form and order summary */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f8f9fa;
+  background-color: lightgoldenrodyellow;
   padding: 20px;
 }
 
@@ -95,7 +94,6 @@ button:hover {
   text-align: center;
   margin-top: 20px;
   display: none;
-  /* Hidden by default */
 }
 
 /* Mobile Responsive Styles */
@@ -170,5 +168,3 @@ button:hover {
     font-size: 14px;
   }
 }
-
- 
